--- a/DungeonsAndDragons/DnDEngine.Data/DnDEngine.Data.csproj
+++ b/DungeonsAndDragons/DnDEngine.Data/DnDEngine.Data.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DFEFBE43-CE2D-4E24-BA22-894E8416F6C0}</ProjectGuid>
+    <ProjectGuid>{CD293FF8-17F5-45AA-A510-6D8E51CF5A5D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DnDEngine</RootNamespace>
-    <AssemblyName>DnDEngine</AssemblyName>
+    <RootNamespace>DnDEngine.Data</RootNamespace>
+    <AssemblyName>DnDEngine.Data</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dapper, Version=1.40.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dapper.1.42\lib\net45\Dapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,24 +44,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Characters\Age\AgeEffectService.cs" />
-    <Compile Include="Characters\Age\StartingAgeService.cs" />
-    <Compile Include="Characters\Alignment.cs" />
-    <Compile Include="Characters\Feats\Feats.cs" />
-    <Compile Include="Characters\ICharacter.cs" />
-    <Compile Include="Characters\Jobs\Job.cs" />
-    <Compile Include="Characters\Jobs\IStartingAgeRepository.cs" />
-    <Compile Include="Characters\Jobs\Race.cs" />
-    <Compile Include="Characters\Jobs\StartingAge.cs" />
-    <Compile Include="Characters\Skills\Skills.cs" />
-    <Compile Include="Characters\Stats\BaseStats.cs" />
-    <Compile Include="Engine.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Characters\Races\RaceThings.cs" />
-    <Compile Include="Roller\DiceRoller.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Characters\Equipment\" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
