--- a/DungeonsAndDragons/DnDEngine.Services/DnDEngine.Services.csproj
+++ b/DungeonsAndDragons/DnDEngine.Services/DnDEngine.Services.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IFeatService.cs" />
+    <Compile Include="LevelingService.cs" />
     <Compile Include="SkillServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
